# game

./: CMakeLists.txt  README
assets/game_source/: 1.tiled-session  1.tsx  2.py  part1.tmj  part1.tmx  part_1.tsx  part_2.tsx  part_3.tsx  tree.tsx
assets/game_source/.history/: 1_20251206211847.py  1_20251207142156.py  1_20251207142157.py  1_20251207142201.py  1_20251207142202.py  1_20251207142210.py  1_20251207142211.py  1_20251207142214.py  1_20251207142223.py  1_20251207142225.py  1_20251207142247.py  1_20251207142325.py  1_20251207142400.py  1_20251207142848.py  2_20251207151104.py  2_20251207151212.py  2_20251207151213.py  2_20251207151220.py  2_20251207151222.py  2_20251208114148.py  2_20251208114154.py  3_20251213010845.py
assets/game_source/tiled/: 123.tmj  123.tmx
assets/map/: farm.tmj
src/: main.cpp
src/Core/: Game.cpp  Game.h
src/Entity/: Cattle.cpp  Cattle.h  Chick.cpp  Chick.h  Fowl.cpp  Fowl.h  Hen.cpp  Hen.h  Monster.cpp  Monster.h  Pig.cpp  Pig.h  Player.h  Playerstats.cpp  Playerstats.h  Rabbit.cpp  Rabbit.h  StoneBuild.cpp  StoneBuild.h  Tree.cpp  Tree.h  WildPlant.cpp  WildPlant.h
src/Items/: CategoryInventory.cpp  CategoryInventory.h  Crafting.cpp  Crafting.h  DroppedItem.cpp  DroppedItem.h  Equipment.cpp  Equipment.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h
src/Map_Data/: MapData_Farm.h  MapData_Forest.h
src/Pet/: Pet.cpp  Pet.h  PetManager.cpp  PetManager.h  PetRabbit.cpp  PetRabbit.h
src/States/: GameState.cpp  GameState.h  GameState_updates.cpp  GameState_updates.h  State.h
src/Systems/: CollisionSystem.h  Timesystem.h
src/UI/: CategoryInventoryPanel.cpp  CategoryInventoryPanel.h  EventLogPanel.cpp  EventLogPanel.h  InventoryPanel.cpp  InventoryPanel.h  PetPanel.cpp  PetPanel.h  StatsPanel.cpp  Statspanel.h
src/World/: Camera.h  TileMap.cpp  TileMap.h  TileMap_updates.cpp
test_py/: tree_compl.tsx
